# JTOP_GameLauncher

./: .gitignore  2024.8.27.code-profile  README.md  RunDev.bat  gen_publish.bat  index.html  package.json  py2pyd.py  run.bat  test01.cp311-win_amd64.pyd  test03.cp311-win_amd64.pyd  vite.config.js.timestamp-1725063919069-f95322a14b513.mjs
.github/workflows/: main.yml
Python312/DLLs/: python_lib.cat
bin-python/: export_py_func.py
src/: App.jsx  Main.jsx  Sidebar.jsx  TitleBar.jsx
src-python/: download.py  test01.py  test02.py
src-tauri/: Cargo.toml  log.txt  tauri.conf.json
src-tauri/src/: main.rs  utils.rs
src/css/: About.css  App.css  GlobalStyles.css  Sidebar.css  ThirdPartyFrame.css  TitleBar.css
src/pages/: About.jsx  Home.jsx  News.jsx  Settings.jsx  ThirdPartyPage.jsx  Workshop.jsx
