[package]
name = "jtop_gamelauncher"
version = "0.1.0"
description = "JTOP Game Launcher"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-all", "shell-open", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webbrowser = "1.0.1"
simplelog = "0.12.2"
log = "0.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# 使用tauri官方的推荐配置
[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
