[package]
name = "jtop_gamelauncher"
version = "0.1.0"
description = "JTOP Game Launcher"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webbrowser = "1.0.1"
simplelog = "0.12.2"
log = "0.4"
pyo3 = { version = "0.22.2", features = ["extension-module"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
