[package]
name = "jtop_gamelauncher"
version = "0.1.0"
description = "JTOP Game Launcher"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-all", "shell-open", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webbrowser = "1.0.1"
simplelog = "0.12.2"
log = "0.4"
pyo3 = { version = "0.22.2", features = ["extension-module"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # 在发生panic时立即终止（abort）而不是进行堆栈展开（stack unwinding）。
codegen-units = 1 # 这个配置项指定了编译器在生成代码时，将所有包逐个编译，带来更好的性能和更小的二进制文件。
lto = true # 启用了链接时优化
opt-level = 3 # 让编译器进行所有可能的优化
strip = true # 在生成最终的二进制文件时，移除所有的调试符号。
